; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_vfr.c_sse_block16.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_vfr.c_sse_block16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64*, i64*, i32)* @sse_block16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sse_block16(i32* %0, i64* %1, i64* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i64* %1, i64** %6, align 8
  store i64* %2, i64** %7, align 8
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %11, align 4
  store i32 0, i32* %10, align 4
  br label %13

13:                                               ; preds = %55, %4
  %14 = load i32, i32* %10, align 4
  %15 = icmp slt i32 %14, 16
  br i1 %15, label %16, label %58

16:                                               ; preds = %13
  store i32 0, i32* %9, align 4
  br label %17

17:                                               ; preds = %43, %16
  %18 = load i32, i32* %9, align 4
  %19 = icmp slt i32 %18, 16
  br i1 %19, label %20, label %46

20:                                               ; preds = %17
  %21 = load i32*, i32** %5, align 8
  %22 = load i64*, i64** %6, align 8
  %23 = load i32, i32* %9, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i64, i64* %22, i64 %24
  %26 = load i64, i64* %25, align 8
  %27 = getelementptr inbounds i32, i32* %21, i64 %26
  %28 = load i32, i32* %27, align 4
  %29 = load i32*, i32** %5, align 8
  %30 = load i64*, i64** %7, align 8
  %31 = load i32, i32* %9, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds i64, i64* %30, i64 %32
  %34 = load i64, i64* %33, align 8
  %35 = getelementptr inbounds i32, i32* %29, i64 %34
  %36 = load i32, i32* %35, align 4
  %37 = sub i32 %28, %36
  store i32 %37, i32* %12, align 4
  %38 = load i32, i32* %12, align 4
  %39 = load i32, i32* %12, align 4
  %40 = mul nsw i32 %38, %39
  %41 = load i32, i32* %11, align 4
  %42 = add i32 %41, %40
  store i32 %42, i32* %11, align 4
  br label %43

43:                                               ; preds = %20
  %44 = load i32, i32* %9, align 4
  %45 = add nsw i32 %44, 1
  store i32 %45, i32* %9, align 4
  br label %17

46:                                               ; preds = %17
  %47 = load i32, i32* %8, align 4
  %48 = load i64*, i64** %6, align 8
  %49 = sext i32 %47 to i64
  %50 = getelementptr inbounds i64, i64* %48, i64 %49
  store i64* %50, i64** %6, align 8
  %51 = load i32, i32* %8, align 4
  %52 = load i64*, i64** %7, align 8
  %53 = sext i32 %51 to i64
  %54 = getelementptr inbounds i64, i64* %52, i64 %53
  store i64* %54, i64** %7, align 8
  br label %55

55:                                               ; preds = %46
  %56 = load i32, i32* %10, align 4
  %57 = add nsw i32 %56, 1
  store i32 %57, i32* %10, align 4
  br label %13

58:                                               ; preds = %13
  %59 = load i32, i32* %11, align 4
  ret i32 %59
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
